--- a/docs/Python/函数.md
+++ b/docs/Python/函数.md
@@ -1,12 +1,15 @@
 # 函数
 
-对于变量，修改赋值语句中其他变量的值，变量赋值后值始终不变；对于函数，修改其他变量的值，调用函数后函数的返回值可能会受到影响。
+对于变量，赋值完成后，修改赋值语句中其他变量的值，这个变量的值不会因为别的变量改变而自动变化；对于函数，同一个函数 f() ，因为它内部用到了外部变量 a、b 等等，改变这些变量后，再调用函数，返回值就可能变。
 
-有重名时，先检查本地帧，再检查全局帧。例如：
+## 重名
+
+有重名时，先检查本地（局部）帧（框架），再检查全局帧（框架）。例如：
 
 ```python
 def square(square):
     return square * square
+
 x=square(3)  # 返回 9，这里把3传给了局部变量square，再调用square()函数
 ```
 
@@ -22,24 +25,48 @@ max = 42
 print(max(1, 2))  # 输出 42
 ```
 
-内置函数也可以作为另一个内置函数的变量名。例如：`max=min`，调用max(1,2)时会调用min函数。
+内置函数可以作为另一个内置函数的变量名。例如：`max=min`，调用max(1,2)时会调用min函数。
 
-python在赋值时，从右往左先查询值，再赋值。
+## 多重返回值
 
-解释器不会将 None 作为表达式的值显示出来。当函数不返回任何东西时，默认返回 None。对于`print()`函数，输出需要打印在屏幕上的字符后，返回 None。例如：
+return语句可以返回多个值。例如：
 
 ```python
->>> print(print(1),print(2))
-1
-2
-None None
+>>> def divide_exact(n, d):
+...    return n // d, n % d
+>>> quotient, remainder = divide_exact(2013, 10)
 ```
 
-print 将显示不带引号的文本，但是 return 将保留引号。
+## 高阶函数：接受另一个函数作为参数的函数
 
-Traceback 中，最近一次调用位于底部。
+### 函数作为形参
 
-## print与 return 输出时的区别
+在具有多个形参的函数A中，某些形参可能是函数B。在调用函数A时，一定会自动执行函数B。例如：
 
-在输出字符串时，print() 输出内容，不带引号。
-交互式环境自动显示表达式结果，用单引号包裹字符串。
+```python
+def if_(c, t, f):
+    if c:
+        return t
+    else:
+        return f
+
+from math import sqrt
+
+def real_sqrt(x):
+    """Return the real part of the square root of x."""
+    return if_(x >= 0, sqrt(x), 0)
+```
+
+在执行`return if_(x >= 0, sqrt(x), 0)`时，函数`if_`会被调用，并且参数`t`会被求值为`sqrt(x)`。这意味着如果`x`是负数，`sqrt(x)`仍然会被计算，从而导致报错。
+
+### 函数作为返回值
+
+```python
+def make_adder(n):
+    """Return a function that takes one argument k and returns k + n."""
+    def adder(k):
+        return k + n
+    return adder
+```
+
+想计算4 + 3，可以调用`make_adder(3)(4)`
