--- a/docs/Python/函数.md
+++ b/docs/Python/函数.md
@@ -70,3 +70,13 @@ def make_adder(n):
 ```
 
 想计算4 + 3，可以调用`make_adder(3)(4)`
+
+`adder`的父级是`make_adder`，`make_adder`的父级是全局帧。
+
+## 环境图
+
+函数：`func <name> (param) [parent= <parent>]`
+
+调用时，从子级向上，例如上面的代码从`adder`向上找到`make_adder`，再从`make_adder`向上找到全局帧。
+
+当函数被调用时，会创建一个新的局部帧，绑定它的父级为定义该函数时所在的帧，传递参数（当前帧的变量），执行函数。
