feat: replace tRPC Next.js handler with `trpc-openapi` handler and add an OpenAPI example router.

--- a/docs/网络/代理.md
+++ b/docs/网络/代理.md
@@ -1,1 +1,7 @@
 # 代理
+
+代理服务器（Proxy Server）是网络中的一个中间实体，它代表客户端向目标服务器发送请求，并接收目标服务器的响应。其主要功能包括转发请求、缓存数据、访问控制、隐藏客户端真实IP以及突破网络限制等。
+
+代理工作在**应用层**，通常是 HTTP/HTTPS/SOCKS。通常不加密 (HTTPS代理除外)。流量仅限配置了代理的特定应用（如浏览器、下载软件）。速度较快（因为只处理特定流量且可能不加密）。
+
+发明代理服务器的根本原因是为了提高性能、控制访问和节省资源。在带宽昂贵且有限的情况下，设置一个HTTP代理服务器，可以把内容缓存起来，后面人再访问时，直接从代理服务器获取即可。同时，当机构需要知道个人上网在做什么，或者禁止访问某些网站时，可以设置代理服务器，对流量进行控制和审计。
