feat: 添加新的文档导航项，包括基础、网络配置和安全相关内容

--- a/docs/Latex/引用.md
+++ b/docs/Latex/引用.md
@@ -36,3 +36,35 @@
 `year`为页面上标注的“最后编辑年份”。
 
 `note`用于注明这是一个在线资源，并记录了访问该页面的具体日期（2025-11-29）。
+
+## 脚注
+
+### 基本脚注
+
+```latex
+这句话需要脚注说明\footnote{这里写脚注内容。}
+```
+
+### 无编号脚注
+
+```latex
+\footnotetext{这是一条不带编号标记的脚注内容。}
+```
+
+只在页脚放脚注文字，不在正文里放标记。
+
+### 用符号而不是数字做脚注标记（如 * † ‡）
+
+```latex
+\renewcommand{\thefootnote}{\fnsymbol{footnote}}
+正文\footnote{符号脚注。}
+\renewcommand{\thefootnote}{\arabic{footnote}}
+```
+
+### 在章节标题里加脚注
+
+直接 `\section{... \footnote{...}}` 可能报 warning/出错。
+
+```latex
+\section{标题\texorpdfstring{\footnote{脚注内容}}{}}
+```
