feat: 添加Lambda函数的说明，介绍其作为高阶函数的特例

--- a/docs/Python/函数.md
+++ b/docs/Python/函数.md
@@ -80,3 +80,7 @@ def make_adder(n):
 调用时，从子级向上，例如上面的代码从`adder`向上找到`make_adder`，再从`make_adder`向上找到全局帧。
 
 当函数被调用时，会创建一个新的局部帧，绑定它的父级为定义该函数时所在的帧，传递参数（当前帧的变量），执行函数。
+
+## Lambda 函数
+
+lambda函数是匿名函数，可以看作是高阶函数的特例。例如：`square = lambda x: x * x`，此时square被绑定为了x的平方这样一个函数。也可以直接用`(lambda x:x * x)(3)`，直接调用lambda函数。
