--- a/docs/Python/函数.md
+++ b/docs/Python/函数.md
@@ -84,3 +84,18 @@ def make_adder(n):
 ## Lambda 函数
 
 lambda函数是匿名函数，可以看作是高阶函数的特例。例如：`square = lambda x: x * x`，此时square被绑定为了x的平方这样一个函数。也可以直接用`(lambda x:x * x)(3)`，直接调用lambda函数。
+
+图片里写的是 **Function Currying（函数柯里化）**。这是函数式编程里的一个重要概念，我用**直观 + 例子**给你解释。
+
+## 函数柯里化（单参数函数链）
+
+> 把一个“接收多个参数的函数”，变成**一连串每次只接收一个参数的函数**。
+
+```python
+def add(a):
+    def add(b):
+        return a + b
+    return add
+
+add(2)(3)
+```
