feat: 更新文档导航，添加生物医学信号处理项

--- a/docs/BME/生物医学信号处理.md
+++ b/docs/BME/生物医学信号处理.md
@@ -57,21 +57,29 @@ f(alias) = |f（实际） - k * fs|，并且要保证 f(alias) 落在 **0 Hz 到
 
 ### 波形
 
-* **P 波**：心房去极化
-* **QRS 波群**：心室去极化
-* **T 波**：心室复极化
+* **P 波**：心房去极化，即心房肌细胞兴奋并引发心房收缩。特点：幅度较小、频率成分较低、在 ECG 中容易被噪声掩盖。
+* **QRS 波群**：心室去极化。特点：幅度大、上升沿陡峭、高频成分丰富（约 10–25 Hz）。
+* **T 波**：心室复极化。特点：斜率平缓、高频成分较少、波形结束点（T 波终点）界定困难。
 
 ### 去噪
 
-* 工频干扰（50 Hz / 60 Hz）
-* 肌电干扰（EMG）
-* 基线漂移（呼吸、体动）
+* 工频干扰（50 Hz / 60 Hz）：来源于电力系统。可通过带阻滤波抑制工频干扰，但在 QRS 复合波存在时，线性滤波器可能引入失真，因此在某些情况下需要采用非线性或自适应滤波方法
+* 肌电干扰：来自骨骼肌活动。利用 ECG 的周期性，对齐多个心搏后进行集合平均（ensemble averaging）可以有效降低非同步噪声成分。
+* 基线漂移：来源于呼吸、体动，低频噪声，通常低于 0.5 Hz，通过高通滤波、多采样率方法或样条拟合等方式加以去除
 
 ### R 峰检测
+
+R 峰是 QRS 复合波中幅度最大的正峰，是心搏时间定位的基准点。ECG 中几乎所有时间参数（RR 间期、心率变异性等）都以 R 峰为参考。
 
 ### 心率变异性（HRV）分析
 
 ### 心电分类（正常 / 房颤 / 室早等）
+
+### 心率
+
+Heart Rate (bpm)=60/RR interval (s)
+
+工程上我们不是直接算心率，而是先稳定地检测 R 峰，再从 RR 间期得到心率。”
 
 ## EEG
 
