feat: 更新Python文档，添加函数评估和赋值自动执行的说明

--- a/docs/Python/函数.md
+++ b/docs/Python/函数.md
@@ -2,6 +2,10 @@
 
 对于变量，赋值完成后，修改赋值语句中其他变量的值，这个变量的值不会因为别的变量改变而自动变化；对于函数，同一个函数 f() ，因为它内部用到了外部变量 a、b 等等，改变这些变量后，再调用函数，返回值就可能变。
 
+## 评估（Evaluation）
+
+Python 解释器读取一段代码，进行计算，并最终得出一个“结果对象”的过程。内存中制造出了一个“函数对象”，但代码没有运行。
+
 ## 重名
 
 有重名时，先检查本地（局部）帧（框架），再检查全局帧（框架）。例如：
