--- a/docs/Python/杂项.md
+++ b/docs/Python/杂项.md
@@ -2,7 +2,7 @@
 
 ## 赋值
 
-在赋值时，从右往左先查询值，再赋值。
+在赋值时，从右往左先查询值，再赋值。在查询值时，如果查询到的值是函数，会自动执行。
 
 ## 打印
 
@@ -36,4 +36,10 @@ print(f())   # hello
 
 ### 短路特性
 
-and和or运算符具有短路特性，即它们会根据第一个操作数的值决定是否计算第二个操作数。使用and时，如果第一个操作数为False，则整个表达式为False，第二个操作数不会被计算。使用or时，如果第一个操作数为True，则整个表达式为True，第二个操作数不会被计算。
+and和or运算符具有短路特性，即它们会根据第一个操作数的值决定是否计算第二个操作数。
+
+使用and时，如果左边的值是“假”，则返回左边的值，右边不会被计算。如果左边的值是“真”，它会跳过左边，直接返回右边的值。
+
+使用or时，如果左边的值是“真”，则返回左边的值，右边不会被计算。如果左边的值是“假”，它会跳过左边，直接返回右边的值。
+
+not 会强制将其后面的值转换为布尔类型，然后翻转它。首先，判断之后的值是“真值”还是“假值”。然后翻转结果（真变假，假变真）。
