feat: 更新文献阅读文档，简化预训练和微调阶段描述；在导航中添加P2P部分

--- a/docs/CADD/文献阅读.md
+++ b/docs/CADD/文献阅读.md
@@ -39,9 +39,8 @@
 
 为了让模型具有更强的通用性，研究者采用了**两阶段层级训练策略**： 
 
-1. **第一阶段（预训练）**：在 **nablaDFT** 数据集（包含 1600 万种药物分子的构象）上进行大规模训练，让模型学习广泛的化学空间。 
+1. **预训练**：在 **nablaDFT** 数据集（包含 1600 万种药物分子的构象）上进行大规模训练，让模型学习广泛的化学空间。 
 
+2. **微调**：在精度更高的 **SPICE** 数据集（200 万个生物有机分子，涵盖金属和卤素）上进行微调，提升其处理复杂生物系统和溶剂环境的能力。 
 
-2. **第二阶段（微调）**：在精度更高的 **SPICE** 数据集（200 万个生物有机分子，涵盖金属和卤素）上进行微调，提升其处理复杂生物系统和溶剂环境的能力。 
-
-LiTEN 证明了**通过巧妙的向量运算替代复杂的球谐函数**，可以在不损失物理精度的情况下实现极高的模拟效率。 
+LiTEN 证明了**通过巧妙的向量运算替代复杂的球谐函数**，可以在不损失物理精度的情况下实现极高的模拟效率。
