feat: 更新文献阅读文档，优化模型训练阶段描述并添加P2P导航项

--- a/docs/网络/网络基础.md
+++ b/docs/网络/网络基础.md
@@ -200,3 +200,17 @@ ARP（Address Resolution Protocol，地址解析协议）可以在 **IPv4 局域
 `::1` —— 本机回环（Loopback）
 
 * 指本机。
+
+## 连接方向
+
+入站连接：外部设备主动向本地设备发起的连接请求
+
+- **防火墙**：入站连接通常需要**防火墙允许**才能通过（默认情况下，防火墙会阻止所有入站连接，以防止未经授权的外部访问）。
+
+- **安全风险**：入站连接是网络攻击的常见入口（比如黑客扫描开放端口并发起入站连接试图入侵），因此需要谨慎开放入站端口（如仅允许可信IP或应用）。
+
+出站连接：本地设备主动向外部设备发起的连接请求
+
+- **被动节点**：**不主动产生业务流量**、**不主动发起会话**的实体。它通常**监听**（listen）或**等待**（wait）来自其他节点的请求，然后根据请求进行响应或转发。一般指服务器。
+
+- **主动节点**：主动发起连接、发起查询或主动推送数据。
