feat: 更新P2P文档，补充基本知识和连接方向的详细描述；添加网络安全文档

--- a/docs/网络/网络基础.md
+++ b/docs/网络/网络基础.md
@@ -201,7 +201,7 @@ ARP（Address Resolution Protocol，地址解析协议）可以在 **IPv4 局域
 
 * 指本机。
 
-## 连接方向
+## 连接
 
 入站连接：外部设备主动向本地设备发起的连接请求
 
@@ -209,8 +209,75 @@ ARP（Address Resolution Protocol，地址解析协议）可以在 **IPv4 局域
 
 - **安全风险**：入站连接是网络攻击的常见入口（比如黑客扫描开放端口并发起入站连接试图入侵），因此需要谨慎开放入站端口（如仅允许可信IP或应用）。
 
-出站连接：本地设备主动向外部设备发起的连接请求
+连接过程：
+1.  公司的电脑（外网）主动向路由器的公网IP（123.123.123.123）的3389端口发起连接。
+2.  路由器检查它的 **NAT连接跟踪表**，发现 **没有任何一条现有记录** 是关于 `公网IP:3389` 这个端口的。
+3.  路由器不知道这个包应该发给内网的哪个设备。默认情况下，出于安全考虑，路由器的防火墙会 **丢弃这个包**，连接失败。
+
+- 端口转发：在路由器上设置一条规则，将外部网络（互联网）对路由器特定端口的访问请求，自动转发到内网中指定设备的指定端口上。
+
+出站连接：本地设备主动向外部设备发起的连接请求。普通用户正常上网几乎全部是 **“由内网设备主动向外网服务器发起连接”**。
+
+连接过程：
+1.  **电脑（内网IP，如 192.168.1.100）** 想访问谷歌服务器（公网IP，如 142.250.185.78）。
+2.  电脑生成一个TCP连接请求包。这个包里有：
+    *   **源IP:** 192.168.1.100
+    *   **源端口:** 一个随机的高位端口（比如 54321）
+    *   **目标IP:** 142.250.185.78
+    *   **目标端口:** 80 (HTTP) 或 443 (HTTPS)
+3.  这个包到达路由器。
+4.  **路由器进行NAT转换：**
+    *   它把数据包的 **源IP** 改成路由器自己的 **公网IP**（比如 123.123.123.123）。
+    *   它把数据包的 **源端口** 也改成一个 **随机的外网端口**（比如 65500）。**路由器会记住这个映射关系**
+5.  路由器在自己的 **NAT连接跟踪表** 里创建一条记录：
+    `内网IP:内网端口  <-->  公网IP:外网端口  <-->  目标服务器IP:目标端口`
+    例如：`192.168.1.100:54321  <-->  123.123.123.123:65500  <-->  142.250.185.78:443`
+6.  修改后的数据包（源IP:端口 = 123.123.123.123:65500）被发送到互联网，最终到达谷歌服务器。
+7.  响应数据包同理返回电脑。
 
 - **被动节点**：**不主动产生业务流量**、**不主动发起会话**的实体。它通常**监听**（listen）或**等待**（wait）来自其他节点的请求，然后根据请求进行响应或转发。一般指服务器。
 
 - **主动节点**：主动发起连接、发起查询或主动推送数据。
+
+## NAT
+
+> NAT（网络地址转换）是路由器将内网私有IP转换为公网IP的技术。
+
+**NAT Type 1（Open / Direct）**
+- 设备直接获取公网IP，无NAT
+- 连接成功率：100%
+
+**NAT Type 2（Moderate）**
+- 特点：有防火墙但端口有限制
+- 连接成功率：较高
+
+**NAT Type 3（Strict）**
+- 特点：严格NAT，需手动配置端口映射
+- 连接成功率：中等
+
+**NAT Type 4（Symmetric）**
+- 特点：每次连接分配不同端口
+- 连接成功率：最低
+
+### 改善NAT类型
+
+- **UPnP（通用即插即用）**：客户端自动在路由器上创建端口映射
+
+- **NAT-PMP（苹果的端口映射协议）**：与UPnP类似，但更轻量级
+
+- **手动端口映射**：登录路由器管理界面，手动设置端口转发规则
+
+- **DMZ（非军事区）**：将设备完全暴露在公网，不推荐使用
+
+### CGNAT
+
+**运营商级网络地址转换**。运营商（移动、联通、电信等）因为IPv4地址枯竭，在其网络内部又做了一层NAT。路由器获取到的WAN口IP地址（在路由器管理页面看到的外网IP）是一个**内网IP**（通常是 `100.64.x.x` 到 `100.127.x.x` 或 `10.x.x.x`），而不是全球唯一的公网IP。
+
+**如何判断自己是否在CGNAT下？**
+
+1.  **查看路由器WAN口IP**：登录路由器管理界面，找到“网络状态”或“WAN口信息”，记下IP地址。
+2.  **与公网IP对比**：用手机或电脑直接访问 `ip138.com` 或 `whatismyip.com`，查看你当前的公网IP。
+3.  **如果两个IP地址一致**：恭喜，你有**公网IP**（但可能仍需端口转发）。**如果两个IP地址完全不同**，且路由器WAN口IP是 `100.64.x.x`， `10.x.x.x`， `172.16.x.x` ~ `172.31.x.x`， `192.168.x.x` 这些范围内的任何一个：那么你**极有可能**处于CGNAT之下。
+
+**CGNAT的影响：**
+这是比家庭路由器NAT更严重的一层障碍。**即使你在自家路由器上做了完美的端口转发，外面来的连接请求也会被运营商的CGNAT设备挡住，无法到达你的路由器。** 这是目前很多移动宽带用户BT下载慢的主要原因。
