Refactor code structure for improved readability and maintainability

--- a/docs/CADD/文献阅读.md
+++ b/docs/CADD/文献阅读.md
@@ -44,3 +44,107 @@
 2. **微调**：在精度更高的 **SPICE** 数据集（200 万个生物有机分子，涵盖金属和卤素）上进行微调，提升其处理复杂生物系统和溶剂环境的能力。 
 
 LiTEN 证明了**通过巧妙的向量运算替代复杂的球谐函数**，可以在不损失物理精度的情况下实现极高的模拟效率。
+
+## [Drug Discovery Today] Artificial intelligence in peptide-based drug design
+
+<iframe 
+    src="/Files/[Drug Discovery Today] Artificial intelligence in peptide-based drug design" 
+    width="100%" 
+    height="600px" 
+    style="border: none;">
+</iframe>
+
+### 背景
+
+蛋白质-蛋白质相互作用（PPIs）是许多生物过程的关键，也是药物研发的重要靶点。但由于PPI界面通常较大且平坦，传统的小分子药物难以有效靶向（即所谓“不可成药”靶点）。多肽介于小分子和抗体之间，兼具抗体的高特异性/高亲和力与小分子的部分组织渗透性，被认为是调节PPIs的理想候选者 。传统计算方法（如分子对接、MD模拟）受限于多肽的高柔性（Flexibility）和巨大的计算成本，难以高效设计出全新的多肽结合剂（Binder）。
+
+### 现有数据库
+
+现有的蛋白质-多肽相互作用（PpIs）数据库（如PepBDB, Propedia, PepX）大多来源于PDB，存在数据冗余、多肽长度较短（多为短肽片段）以及缺乏高质量复合物结构的问题。PPI位点预测方面，传统方法（如PepBind）依赖静态假设，局限性大；**深度学习方法**（如CAMP, PepNN, MaSIF）通过整合序列和结构信息，利用卷积神经网络（CNN）、图注意力层（Graph Attention）甚至几何深度学习（Geometric DL）来捕捉局部和全局特征，显著提高预测准确性 。
+
+### 从序列预测蛋白质-多肽复合物3D结构的AI工具
+
+* **AlphaFold (AF) 系列：** AF2 利用多序列比对（MSA）捕捉共进化信号，能有效预测多肽结构，但对短肽（5-30残基）的预测仍有挑战 。
+
+* **AF3 与 RoseTTAFold All-Atom (RFAA)：** 新一代模型（如AF3, RFAA）支持全原子建模，能预测包含配体、修饰的复合物结构。AF3在少量样本测试中显示出比AF-Multimer更高的质量，但在非标准修饰及大环多肽上的应用仍需验证 。
+
+* **局限性：** 多肽在未结合状态下往往是无序的（Disordered），结合后才折叠成特定构象，这种动态特性是目前结构预测模型面临的主要难点 。
+
+### 靶向性多肽的生成式设计方法
+
+#### 基于“幻觉”的方法 (Hallucination-based methods)
+
+> 利用现有的高精度结构预测网络（如AlphaFold）作为“评分器”，通过反向传播或迭代优化（如MCMC），将随机序列优化为能够折叠成特定结构并结合靶点的序列 。
+
+* **ColabDesign:** 基于折叠模型的de novo设计流程 。
+
+* **EvoBind:** 结合了Foldseek（生成种子结构）、ESM-IF1（逆折叠）和AlphaFold（评估），在设计异源二聚体界面方面优于ProteinMPNN 。
+
+* **EvoPlay:** 引入强化学习（RL）和蒙特卡洛树搜索（MCTS），平衡了探索与利用，避免陷入局部最优 。
+
+#### 序列-结构协同设计方法 (Sequence-structure co-design)
+
+> 克服了分步设计（先定骨架再填序列）的局限，利用**扩散模型（Diffusion Models）**或流匹配（Flow-matching）同时生成多肽的骨架结构和氨基酸序列 。
+
+* **DiffPepBuilder:** 使用SE(3)等变扩散架构，并引入SSBuilder模块专门设计二硫键以增强多肽稳定性 。
+
+* **PepGLAD:** 几何潜在扩散模型，利用变分自编码器（VAE）处理不同大小的残基，显著提高了结合构象的恢复率 。
+
+***PepFlow:** 基于流匹配的多模态生成模型，在侧链包装和骨架设计的多样性上表现出色 。
+
+#### 基于序列的方法 (Sequence-based methods)
+
+> 不依赖于靶点的3D结构，而是利用**蛋白质语言模型（PLMs）**（如ESM2）从海量序列数据中学习到的模式来生成结合多肽。这对于靶向无序蛋白（IDPs）或结构未知的靶点特别有效 。
+
+
+* 
+**PepMLM:** 利用掩码语言模型（MLM）策略，在靶蛋白序列后“修复”出结合多肽，命中率优于RFdiffusion 。
+
+
+* 
+**moPPIt:** 针对特定基序（Motif）的设计，通过Transformer模型结合遗传算法，能够针对动态或无序靶点生成高亲和力多肽 。
+
+
+* 
+**Cut&CLIP:** 结合对比学习，专门设计用于介导蛋白质降解的多肽（如用于PROTACs） 。
+
+
+
+
+
+### 5. 评估指标
+
+文章总结了评价AI设计多肽质量的关键指标：
+
+* 
+**自洽性 (Self-consistency):** 生成序列折叠回的结构与设计结构的一致性 。
+
+
+* 
+**多样性 (Diversity):** 设计覆盖的构象空间广度 。
+
+
+* 
+**结合亲和力估算:** 使用Rosetta能量打分、AF的置信度分数（pLDDT）以及界面评分（ipTM, actifpTM） 。
+
+
+
+### 6. 挑战与未来展望
+
+文章最后指出了当前研究的不足和未来的发展方向：
+
+* 
+**成药性优化：** 目前多肽药物面临细胞膜渗透性差、半衰期短、口服生物利用度低等问题 。未来模型需要通过引入**非天然氨基酸（NCAAs）**和**环肽（Cyclic peptides）**设计来解决这些问题 。
+
+
+* 
+**多目标优化：** 未来的AI模型不能仅关注结合亲和力，还需同时优化特异性（减少脱靶效应）、稳定性和药代动力学性质（PK） 。
+
+
+* 
+**实验验证闭环：** 尽管AI预测结果令人振奋，但目前还没有完全由AI设计的多肽药物获批。建立计算预测与湿实验验证（Wet-lab validation）的紧密闭环是未来的关键 。
+
+
+
+**总结：**
+这篇论文全面论证了AI正在将多肽药物发现从传统的“试错法”转变为理性的“数据驱动设计”。它重点强调了**深度生成模型（尤其是扩散模型和语言模型）**在处理多肽高柔性和复杂PPI界面方面的突破性能力，同时也冷静地指出了从“设计出结合剂”到“开发出成药分子”之间仍需跨越的障碍（如环化、非天然修饰及多目标优化）。
