feat: 更新文档，添加云服务、Linux管理和代理相关内容

--- a/docs/EE/无线电.md
+++ b/docs/EE/无线电.md
@@ -16,7 +16,13 @@
 
 由于电离层的不稳定性，所以声音也会出现忽大忽小不够稳定的现象，所以**AGC（自动增益）电路的补偿尤为重要**。
 
+[HFCC短波广播频率表北半球冬季（10月底至次年3月底）](http://www.hfcc.org/data/b25/index.phtml)
+
+[HFCC短波广播频率表北半球夏季（3月底至10月底）](http://www.hfcc.org/data/a25/index.phtml)
+
 [短波广播电台分布表](https://blog.xmgspace.me/archives/international-shortwave-to-cn.html)
+
+[历年主流国际电台对华短波广播频率表归档](https://blog.xmgspace.me/sw-schedule-archives.html)
 
 [不同的短波频率和时刻对应的短波频率表](https://shortwaveschedule.com/index.php?now)
 
@@ -41,3 +47,10 @@
 ### 单边带（SSB）
 
 单边带本来是一种调制方式，现在主要用于特殊电台和本地电台爱好者使用。
+
+## 收听
+
+- 应注意所处位置相对空旷并远离电子干扰源，理想的地点如寝室阳台。
+- 如遭遇邻频干扰，请打开同步检波（SYNC）功能，并在LSB/USB两个选项中选择一个接收质量较高的。
+- 某些电台可能会因为不可知的原因被中国之声盖台，此时请切换至其他频率或查找是否有可用的中波（MW）频率。
+- 网络串流收听：可以从以下网页寻找m3u8广播源：<https://blog.xmgspace.me/swdx.html>、<https://qiuyuair.com/radio-television-strem-proxy-service_20211030/>、<https://iptv-org.github.io/>
