--- a/docs/Latex/引用.md
+++ b/docs/Latex/引用.md
@@ -68,3 +68,7 @@
 ```latex
 \section{标题\texorpdfstring{\footnote{脚注内容}}{}}
 ```
+
+## 交叉引用
+
+`label`相当于图片的tag，引用时可以写成“如图`\ref{xxxx}`所示，其中xxxx是引用对象的`label`。
