--- a/docs/环境/包管理.md
+++ b/docs/环境/包管理.md
@@ -39,3 +39,58 @@ pip 本身是一个 Python 包，同时它又可以安装和管理 Python 包。
     *   **内置 TypeScript 支持：** 你不需要安装 `ts-node` 或配置构建步骤，直接运行 `.ts` 文件，Bun 原生支持。
     *   **启动速度极快：** 相比 Node.js，它的启动时间几乎可以忽略不计，非常适合 Serverless 环境。
     *   **兼容 Node.js API：** 它尽力兼容 Node.js 的模块（fs, path, http 等），大多数现有的 npm 包都能直接用。
+
+## Node 版本管理
+
+### npm
+
+npm 是 Node.js 自带的包管理器，主要用于安装和管理 JavaScript 包。它也可以用来管理 Node.js 版本，但功能较为有限。
+
+可以通过以下命令查看 npm 的全局安装目录：
+
+```bash
+npm root -g
+```
+
+查看全局可执行文件的安装路径：
+
+```bash
+npm bin -g
+```
+
+#### 验证npm包的安装位置
+
+使用 `which` 查找可执行文件，例如：
+
+```bash
+which pm2
+```
+
+查看软链接指向的实际文件，例如：
+
+```bash
+ls -l $(which pm2)
+```
+
+直接查找 pm2 包目录：
+
+```bash
+npm list -g pm2
+```
+
+或
+
+```bash
+find /usr -name "pm2" -type d 2>/dev/null | grep node_modules
+```
+
+### nvm
+
+**nvm（Node Version Manager）** 是一个用于管理多个 Node.js 版本的工具。它允许在同一台机器上安装和切换不同版本的 Node.js，非常适合需要在不同项目中使用不同 Node.js 版本的开发者。
+
+**检查是否使用 nvm**：
+```bash
+which node
+```
+
+如果输出是 `/home/用户名/.nvm/versions/node/.../bin/node`，说明使用了 nvm。
