--- a/docs/网络/代理.md
+++ b/docs/网络/代理.md
@@ -5,3 +5,20 @@
 代理工作在**应用层**，通常是 HTTP/HTTPS/SOCKS。通常不加密 (HTTPS代理除外)。流量仅限配置了代理的特定应用（如浏览器、下载软件）。速度较快（因为只处理特定流量且可能不加密）。
 
 发明代理服务器的根本原因是为了提高性能、控制访问和节省资源。在带宽昂贵且有限的情况下，设置一个HTTP代理服务器，可以把内容缓存起来，后面人再访问时，直接从代理服务器获取即可。同时，当机构需要知道个人上网在做什么，或者禁止访问某些网站时，可以设置代理服务器，对流量进行控制和审计。
+
+## DNS
+
+- 在系统代理模式下，代理软件仅代理应用层流量（HTTP/HTTPS/SOCKS），**不强制接管 DNS**。系统 DNS 设置仍生效，但 DNS 请求可能被代理规则处理。
+- 在透明代理/TUN 模式下，代理软件通过虚拟网卡接管**所有网络流量**，包括 DNS 请求。此时代理软件完全控制 DNS 解析。
+
+- 如果代理软件未显式配置 DNS，大多数代理工具会**沿用系统 DNS**。
+- 如果代理软件显式配置了 DNS（例如 Clash 配置中指定了 `nameserver: 114.114.114.114`，且开启了 **`dns.enable: true`**），代理软件会**拦截 DNS 请求**，并使用自身配置的 DNS 服务器。
+
+### 判断
+
+```bash
+nslookup google.com
+```
+
+- **如果返回的 DNS 服务器地址是 `127.0.0.1` 或代理软件监听的端口**（如 `127.0.0.1:53`），说明 DNS 被代理接管。
+- **如果返回的是系统 DNS**（如 `10.10.0.21`），说明代理未接管。
