feat: 更新文档，添加CLI工具、API Key配置及文件系统结构说明

--- a/docs/Linux/包管理.md
+++ b/docs/Linux/包管理.md
@@ -24,6 +24,65 @@ sudo dpkg -r <包名>          # 卸载
 ```
 **适用场景**：手动安装第三方 `.deb` 包（通常配合 `apt` 解决依赖）。
 
+## brew
+
+### 安装
+
+```bash
+/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+```
+
+下载依赖项：
+
+```bash
+sudo apt-get install build-essential
+```
+
+### 配置
+
+加入 PATH:
+```bash
+echo >> /home/Henry/.bashrc
+echo 'eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv bash)"' >> /home/Henry/.bashrc
+eval "$(/home/linuxbrew/.linuxbrew/bin/brew shellenv bash)"
+```
+
+### 命令
+
+清理下载的包和临时文件：
+
+```bash
+brew cleanup
+```
+
+| **安装位置：用户目录** (如 `/home/linuxbrew/.linuxbrew` 或 `/usr/local`) |
+| **权限要求** | 通常需要 **root 权限** (`sudo`) | 通常**不需要** `sudo` (以普通用户身份运行) |
+| **软件来源** | 发行版的官方仓库 (由社区或维护者打包) | 上游软件的官方源码或二进制 (更新通常更快) |
+| **依赖管理** | 严格依赖系统库，版本通常较旧但极其稳定 | 倾向于自建依赖或下载最新版，避免污染系统库 |
+| **定位** | 管理操作系统本身的组件和基础软件 | 管理用户的开发工具、桌面应用和实用程序 |
+
+
+### 3. 如果用 Brew 安装 GCC，再用 Apt 安装 GCC，会装两遍吗？
+
+**答案是：是的，它们会安装两遍，且互不干扰。**
+
+#### 为什么会装两遍？
+因为它们的**安装路径完全不同**，操作系统把它们视为两个不同的程序：
+
+1.  **Apt 安装的 GCC：**
+    *   通常被安装到 `/usr/bin/gcc`。
+    *   这是系统级的编译器，系统内核或其他依赖它的软件可能会用到。
+2.  **Brew 安装的 GCC：**
+    *   通常被安装到 `/home/linuxbrew/.linuxbrew/bin/gcc` (或者是你 Homebrew 前缀目录下的 bin 文件夹)。
+    *   这是一个独立的副本，专门给用户使用。
+
+#### 哪一个会被优先使用？
+这取决于你的环境变量 `$PATH` 的配置顺序。
+
+*   如果你在终端输入 `gcc`，系统会从 `$PATH` 的第一个路径开始找。
+*   通常安装完 Brew 后，它会提示你把它的路径加到 `$PATH` 的**最前面**。
+*   **结果：** 如果你输入 `gcc`，你实际运行的是 **Brew 安装的版本**（因为它在路径前面）。如果你想用 Apt 安装的版本，可能需要输入全路径 `/usr/bin/gcc` 或者调整 `$PATH`。
+
 ## 已安装软件的位置
 
 ### 软件包文件（.deb）缓存位置
