--- a/docs/网络/网络基础.md
+++ b/docs/网络/网络基础.md
@@ -281,3 +281,36 @@ ARP（Address Resolution Protocol，地址解析协议）可以在 **IPv4 局域
 
 **CGNAT的影响：**
 这是比家庭路由器NAT更严重的一层障碍。**即使你在自家路由器上做了完美的端口转发，外面来的连接请求也会被运营商的CGNAT设备挡住，无法到达你的路由器。** 这是目前很多移动宽带用户BT下载慢的主要原因。
+
+## localhost
+
+> **localhost** 是计算机在网络中对自己的一种称呼，意思是“本机”或“本地主机”。
+
+`localhost` 是一个域名，它对应的 IP 地址通常是 `127.0.0.1`（在 IPv4 标准下）或 `::1`（在 IPv6 标准下）。当向 localhost 发送数据时，数据包通常**不会**经过物理网卡（网线或 Wi-Fi），也不会传输到外部网络。操作系统会在内部直接把数据“回环”拦截下来，送回给本机。
+
+* **Loopback Interface（回环接口）：** 这是一个虚拟的网络接口。即便电脑拔掉了网线、断开了 Wi-Fi，这个接口依然存在且能工作。
+
+## 网络层级
+
+> 每一层都为上一层提供服务，并对数据进行“打包”。
+
+### 应用层 (Application Layer)
+
+* **协议：** HTTP, HTTPS, FTP, DNS
+* **功能：** 产生数据。比如浏览器发起一个 `GET /` 请求。
+* **作用服务：** 环境变量中设置的`HTTPS_PROXY` 就作用在这一层。它直接修改了程序的行为，让程序不再直接找目标地址，而是打包好数据发给代理地址。
+
+#### 传输层 (Transport Layer)
+
+* **代表协议：** TCP, UDP
+* **功能：** 负责建立连接（三次握手）。它只关心 **端口号 (Port)**。
+
+#### 网络层 (Network Layer)
+
+* **代表协议：** IP (IPv4, IPv6), ICMP
+* **功能：** 负责路由，决定数据包往哪个 **IP 地址** 走。
+* **作用服务：** `localhost` 触发了系统的**回环驱动**，数据包直接在内核里原地调头，不发往物理线路。
+
+#### 链路层与物理层 (Link & Physical Layer)
+
+* **硬件：** 网卡、网线、Wi-Fi 信号。
