feat: 更新文档，添加AI IDE和VSCode扩展相关内容，优化CLI工具描述

--- a/docs/AI/提示词工程.md
+++ b/docs/AI/提示词工程.md
@@ -3,7 +3,7 @@
 ## Zensical 目录制作
 
 ```plaintext
-请帮我看看我的CS Learning文件夹、Finance Learning文件夹、Life文件夹下的zensical.toml中nav内部分是否和docs中的文件对应。如有缺漏，在zensical.toml中nav内根据正确格式，加入缺少的文件。
+请帮我看看我的CS Learning文件夹、Finance Learning文件夹、Life文件夹下的zensical.toml中nav内部分是否和docs中的文件对应。如有缺漏，在zensical.toml中nav内根据正确格式，加入缺少的文件。如果有多余的文件，也请删除。
 ```
 
 ## PPT制作
