feat: 添加SSH主机配置和搭建代理文档，更新导航菜单

--- a/docs/网络/网络基础.md
+++ b/docs/网络/网络基础.md
@@ -300,17 +300,25 @@ ARP（Address Resolution Protocol，地址解析协议）可以在 **IPv4 局域
 * **功能：** 产生数据。比如浏览器发起一个 `GET /` 请求。
 * **作用服务：** 环境变量中设置的`HTTPS_PROXY` 就作用在这一层。它直接修改了程序的行为，让程序不再直接找目标地址，而是打包好数据发给代理地址。
 
-#### 传输层 (Transport Layer)
+#### HTTP
+
+用HTTP协议访问服务器时，默认访问80端口。
+
+#### HTTPS
+
+用HTTPS协议访问服务器时，默认访问443端口。
+
+### 传输层 (Transport Layer)
 
 * **代表协议：** TCP, UDP
 * **功能：** 负责建立连接（三次握手）。它只关心 **端口号 (Port)**。
 
-#### 网络层 (Network Layer)
+### 网络层 (Network Layer)
 
 * **代表协议：** IP (IPv4, IPv6), ICMP
 * **功能：** 负责路由，决定数据包往哪个 **IP 地址** 走。
 * **作用服务：** `localhost` 触发了系统的**回环驱动**，数据包直接在内核里原地调头，不发往物理线路。
 
-#### 链路层与物理层 (Link & Physical Layer)
+### 链路层与物理层 (Link & Physical Layer)
 
 * **硬件：** 网卡、网线、Wi-Fi 信号。
