--- a/docs/Python/函数.md
+++ b/docs/Python/函数.md
@@ -31,6 +31,8 @@ print(max(1, 2))  # 输出 42
 
 内置函数可以作为另一个内置函数的变量名。例如：`max=min`，调用max(1,2)时会调用min函数。
 
+当后面定义了一个与前面函数同名的函数时，优先使用后定义的函数。
+
 ## 多重返回值
 
 return语句可以返回多个值。例如：
