feat: 添加文件传输文档，涵盖SCP、图形化工具、Xshell、VS Code和Azcopy的使用说明

--- a/docs/Python/函数.md
+++ b/docs/Python/函数.md
@@ -6,6 +6,13 @@
 
 Python 解释器读取一段代码，进行计算，并最终得出一个“结果对象”的过程。内存中制造出了一个“函数对象”，但代码没有运行。
 
+### 内部名称
+
+当定义 def square(x): ... 时，Python 实际上做了两件事：在内存中创建一个函数对象，它的名字叫 square；在当前的环境中创建一个变量名 square，并指向这个函数对象。可以通过函数的 `.__name__` 属性看到这个内部名称：
+```Python
+print(square.__name__)  # 输出: "square"
+```
+
 ## 重名
 
 有重名时，先检查本地（局部）帧（框架），再检查全局帧（框架）。例如：
@@ -79,9 +86,49 @@ def make_adder(n):
 
 `adder`的父级是`make_adder`，`make_adder`的父级是全局帧。
 
+### 闭包
+
+通常情况下，一个函数运行结束，它内部的局部变量就会被销毁。但在闭包下，即使外部函数已经执行完了，内部函数依然能记住并访问外部函数里的变量。
+
+要形成一个闭包，必须满足以下三点：
+
+1. **必须有嵌套函数**（函数里面定义函数）。
+2. **内部函数必须引用外部函数的变量**。
+3. **外部函数必须返回内部函数**。
+
+例如：
+
+```python
+def delay(arg):
+    def g():
+        return arg  # g 引用了外部的 arg，形成了闭包
+    return g
+
+```
+
+当执行 `f = delay(6)` 时：
+
+1. `delay` 执行完毕。
+2. 返回的函数 `f`（也就是 `g`）其实**随身携带**了参数 `6`。
+3. 所以当执行 `f()` 时，返回 `6`。
+
 ## 环境图
 
-函数：`func <name> (param) [parent= <parent>]`
+Frame：
+
+```plaintext
+func <name> (param) [parent= <parent>]
+一些变量
+return <value>
+```
+
+Object：
+
+```plaintext
+<type> object at <address>
+```
+
+Frame 代表函数调用时的环境，Object 代表内存中的对象。Frame中的变量会指向Object。
 
 调用时，从子级向上，例如上面的代码从`adder`向上找到`make_adder`，再从`make_adder`向上找到全局帧。
 
@@ -105,3 +152,27 @@ def add(a):
 
 add(2)(3)
 ```
+
+## 装饰器
+
+> **Python 装饰器（Decorator）** 允许在不修改原有函数代码的情况下，给函数添加新的功能。
+
+装饰器本质上是一个**闭包**，它接收一个函数作为参数，并返回一个新的函数。使用 `@` 符号来使用装饰器。例如：
+
+```python
+def my_decorator(func):
+    def wrapper():
+        print("--- 执行函数前：准备工作 ---")
+        func()
+        print("--- 执行函数后：清理工作 ---")
+    return wrapper
+@my_decorator
+def say_hello():
+    print("你好，世界！")
+say_hello()
+```
+
+当使用 `@my_decorator` 作用在 `say_hello` 函数上时，Python 实际上执行了以下操作：`say_hello = my_decorator(say_hello)`，原有的 `say_hello` 函数被替换成了 `wrapper` 函数。当调用 `say_hello()` 时，实际上是在执行 `wrapper()`。
+
+## 递归调用
+
