feat: 添加递归和数据结构文档，包含分区问题、汉诺塔问题及列表基本信息

--- a/docs/Python/函数.md
+++ b/docs/Python/函数.md
@@ -174,5 +174,66 @@ say_hello()
 
 当使用 `@my_decorator` 作用在 `say_hello` 函数上时，Python 实际上执行了以下操作：`say_hello = my_decorator(say_hello)`，原有的 `say_hello` 函数被替换成了 `wrapper` 函数。当调用 `say_hello()` 时，实际上是在执行 `wrapper()`。
 
-## 递归调用
+## 递归
 
+### 交叉递归
+
+交叉递归是指两个或多个函数相互调用对方来实现递归的过程。例如，计算一个数是否为偶数或奇数：
+
+```python
+def is_even(n):
+    if n == 0:
+        return True
+    else:
+        return is_odd(n - 1)
+def is_odd(n):
+    if n == 0:
+        return False
+    else:
+        return is_even(n - 1)
+```
+
+### 树形递归
+
+树形递归是指一个函数在执行过程中会多次调用自身，从而形成树状的调用结构。例如，计算斐波那契数列：
+
+```python
+def fibonacci(n):
+    if n <= 1:
+        return n
+    else:
+        return fibonacci(n - 1) + fibonacci(n - 2)
+```
+
+### 匿名函数递归
+
+```python
+lambda f: (lambda x: f(f, x))
+```
+
+这个表达式是一个函数`lambda_f`，这个函数会返回一个把自己的参数作为其中一个参数的函数，它相当于：
+
+```python
+def lambda_f(f):
+    def lambda_x(x):
+        return f(f, x)
+    return lambda_x
+```
+
+这个技巧可以用来实现匿名函数的递归调用。例如，计算阶乘：
+
+```python
+(lambda x: f(f, x))(lambda f, n: 1 if n == 1 else (n*f(f, n-1)))
+```
+
+后半段相当于：
+
+```python
+def factorial(f, n):
+    if n == 1:
+        return 1
+    else:
+        return n * f(f, n - 1)
+```
+
+当使用`lambda_f(factorial)(n)`时，它会先返回`lambda_x`，然后运行`lambda_x(n)`，即`factorial(factorial, n)`从而使得参数f始终为`factorial`函数本身，实现递归调用。
