--- a/docs/Python/数据结构.md
+++ b/docs/Python/数据结构.md
@@ -8,6 +8,14 @@
 - 元素求和： `sum(<list>[, start])`  其中不指定 start 则默认为 0，可以指定 start 为空list，则可以结合列表
 - 最大值： `max(<list>[, key=function])`，其中 key 参数可以指定一个函数，把函数作用到每个元素上再比较大小
 - 加入元素： `<list>.append(<element>)` 在列表末尾添加元素
+- 插入元素： `<list>.insert(index, <element>)` 在指定位置插入元素
+- 删除元素： `<list>.remove(<element>)` 删除第一个匹配的元素
+- 弹出元素： `<list>.pop([index])` 删除并返回指定位置的元素，默认删除最后一个
+- 查找元素位置： `<list>.index(<element>[, start, end])`
+- 计数： `<list>.count(<element>)` 返回元素在列表中出现的次数
+- 排序： `<list>.sort(key=function, reverse=bool)` 就地排序，修改原列表
+- 反转： `<list>.reverse()` 就地反转，修改原列表
+- 延展列表： `<list>.extend(<iterable>)` 将可迭代对象的元素添加到列表末尾
 
 ## 字符串
 
@@ -26,7 +34,7 @@
 
 - 形式：`(<element1>, <element2>, ...)`
 - 获取元素：`<tuple>[index]`
-- 元组不可变，不能修改、添加或删除元素
+- 元组不可变，不能修改、添加或删除元素，但如果元组内部的元素是可变类型（如列表），则可以修改这些元素
 - 单元素元组：`(<element>,)` 注意逗号
 
 ## 数据抽象
@@ -43,3 +51,51 @@
 numer(x)/denom(x)=n/d
 
 也就是：**“构造出来的东西”再被“取出来”后，表示的数值要和原来的 n/d 相同**。
+
+## 树
+
+树是一种递归的数据结构，由节点（node）和边（edge）组成。每个节点包含一个值（label）和指向其子节点的引用。树的顶端节点称为根节点（root），没有子节点的节点称为叶节点（leaf）。
+
+> 一棵树是一个 Python `list`，第 0 个元素是 `label`，后续元素都是子树（branches）。
+
+### 构造器（constructor）
+
+```python
+def tree(label, branches=[]):
+    for branch in branches:
+        assert is_tree(branch)
+    return [label] + list(branches)
+```
+
+- 根据“树”的抽象定义创建一个树值。
+- 维护 ADT 的不变式（invariant）：每个分支也必须是树。
+
+### 选择器（selector）
+
+```python
+def label(tree):
+    return tree[0]
+def branches(tree):
+    return tree[1:]
+```
+
+- 提供“取树的标签”的抽象操作。
+- 提供“取树的所有分支”的抽象操作。
+- 调用者通过它读数据，而不是写 `tree[0]`。
+- 封装“分支存放在 tree[1:]”这一表示细节。
+
+### 判定器/验证器（predicate/validator）
+
+```python
+def is_tree(tree):
+    if type(tree) != list or len(tree) < 1:
+        return False
+    for branch in branches(tree):
+        if not is_tree(branch):
+            return False
+    return True
+def is_leaf(tree):
+    return not branches(tree)
+```
+
+- 判断一个对象是否符合“树 ADT”的表示不变式（representation invariant），让构造器、调试、边界检查更可靠。
