feat: 新增神经网络和搜索文档，包含ReLU激活函数及搜索算法的详细描述

--- a/docs/OI/搜索.md
+++ b/docs/OI/搜索.md
@@ -71,3 +71,21 @@ A*搜索当且仅当以下条件满足时，能够保证找到最优解：
 
 - 如果当前玩家是Maximizer：递归地选择所有可能的行动中使得值最大的行动`Max-Value(Result(state, action))`。
 - 如果当前玩家是Minimizer：递归地选择所有可能的行动中使得值最小的行动`Min-Value(Result(state, action))`。
+
+`Max-Value`设计：
+1. 检查游戏是否结束（`Terminal-Test(state)`），如果是，返回`Utility(state)`。
+2. 初始化`v = -∞`。
+3. 对于在`Action(state)`中每个可能的行动`action`（for循环），计算`v = max(v, Min-Value(Result(state, action)))`。
+4. 返回`v`。
+
+`Min-Value`同理。
+
+### α-β剪枝(Alpha-Beta Pruning)
+
+α-β剪枝是一种优化极大极小算法的技术，通过在搜索过程中剪枝掉不必要的分支，从而减少需要评估的节点数量，提高搜索效率。α是当前已知的对Maximizer最好的选择的下界，β是当前已知的对Minimizer最好的选择的上界。
+
+如果在搜索过程中发现某个节点的值已经超出了α或β的范围，那么可以停止对该节点的进一步评估（剪枝），因为它不会影响最终的决策。
+
+### 受限深度(Minimax)搜索(Limited Depth Search) 
+
+- 评估函数(Evaluation Function)：`Eval(state)`，用于在受限深度下评估非终止状态的得分。
